--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
+        <button class="theme-toggle" id="theme-toggle" aria-label="Toggle Dark/Light Mode">
+            <i class="fa-solid fa-moon"></i>
+        </button>
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
