Animation effect added to the hero text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header id="home" class="hero">
         <div class="hero-content">
             <h2 class="greeting">Hello, I'm</h2>
-            <h1 class="name">Surafel <span class="accent">Tesfaye</span></h1>
+            <h1 class="name">Surafel Tesfaye</h1>
             <h3 class="title">Full-Stack Web Developer</h3>
             <p class="description">I build exceptional digital experiences that are fast, accessible, and visually
                 stunning.</p>
