about me and featured project section updated

--- a/index.html
+++ b/index.html
@@ -64,16 +64,17 @@
             <h2 class="section-title">About <span class="accent">Me</span></h2>
             <div class="about-content">
                 <div class="about-image">
-                    <!-- Image will be generated -->
                     <div class="img-box">
-                        <img src="https://picsum.photos/id/1/400/400" alt="Profile Picture" id="profile-img">
+                        <img src="./assets/img1.jpg" alt="Profile Picture" id="profile-img">
                     </div>
                 </div>
                 <div class="about-text">
-                    <p>I am a passionate Full-Stack Developer with a knack for creating intuitive and dynamic user
-                        interfaces. With a strong foundation in both frontend and backend technologies, I turn complex
-                        problems into elegant solutions.</p>
-
+                    <p>
+                        I am Surafel Tesfaye, a passionate Full-Stack Web Developer, and I love turning ideas into real
+                        web applications.I build websites that are responsive while keeping them visually engaging.
+                        With a strong foundation in both frontend and backend technologies, I turn complex
+                        problems into elegant solutions.
+                    </p>
                     <div class="skills-container">
                         <div class="skill-item">
                             <div class="skill-info">
@@ -95,7 +96,7 @@
                         </div>
                         <div class="skill-item">
                             <div class="skill-info">
-                                <span>React/Next.js</span>
+                                <span>React</span>
                                 <span>85%</span>
                             </div>
                             <div class="progress-bar">
@@ -109,6 +110,15 @@
                             </div>
                             <div class="progress-bar">
                                 <div class="progress" data-width="80%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <div class="skill-info">
+                                <span>MySQL</span>
+                                <span>85%</span>
+                            </div>
+                            <div class="progress-bar">
+                                <div class="progress" data-width="85%"></div>
                             </div>
                         </div>
                     </div>
@@ -125,21 +135,19 @@
                 <!-- Project Card 1 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://picsum.photos/id/20/600/400" alt="Project 1">
+                        <img src="./assets/amazon.png" alt="Project 1">
                         <div class="overlay">
-                            <a href="#" class="btn-icon" title="View Code"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="btn-icon" title="Live Preview"><i
+                            <a href="https://github.com/Surafel13/Amazone-UI-Clone" class="btn-icon" title="View Code"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://amazone-ui-clone-v29y.vercel.app/" class="btn-icon" title="Live Preview"><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
                         <h3>E-Commerce Platform</h3>
-                        <p>A full-featured online store with cart functionality, user authentication, and payment
-                            gateway integration.</p>
+                        <p>A modern, responsive and clean homepage with product grids, a search bar, category banners, and a featured product carousel.</p>
                         <div class="tags">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
+                            <span>React.js</span>
+                            <span>Bootstrap.css</span>
                         </div>
                     </div>
                 </div>
@@ -147,20 +155,20 @@
                 <!-- Project Card 2 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://picsum.photos/id/3/600/400" alt="Project 2">
+                        <img src="./assets/3-600x400.jpg" alt="Project 2">
                         <div class="overlay">
-                            <a href="#" class="btn-icon"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/Surafel13/pulse-chat-app" class="btn-icon"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://pulse-chat-app-rho.vercel.app/" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>Task Management App</h3>
-                        <p>A productivity tool for teams to manage tasks, collaborate in real-time, and track progress.
+                        <h3>Real Time Chat App</h3>
+                        <p>A modern chat application built with React and Firebase. Users can send and receive messages instantly, see online status, and interact through a clean, responsive, and blue-themed interface.
                         </p>
                         <div class="tags">
-                            <span>Vue.js</span>
+                            <span>React.js</span>
                             <span>Firebase</span>
-                            <span>Tailwind</span>
+                            <span>Bootstrap.css</span>
                         </div>
                     </div>
                 </div>
