--- a/index.html
+++ b/index.html
@@ -132,27 +132,8 @@
         <div class="container">
             <h2 class="section-title">Featured <span class="accent">Projects</span></h2>
             <div class="projects-grid">
-                <!-- Project Card 1 -->
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="./assets/amazon.png" alt="Project 1">
-                        <div class="overlay">
-                            <a href="https://github.com/Surafel13/Amazone-UI-Clone" class="btn-icon" title="View Code"><i class="fa-brands fa-github"></i></a>
-                            <a href="https://amazone-ui-clone-v29y.vercel.app/" class="btn-icon" title="Live Preview"><i
-                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                        </div>
-                    </div>
-                    <div class="project-info">
-                        <h3>E-Commerce Platform</h3>
-                        <p>A modern, responsive and clean homepage with product grids, a search bar, category banners, and a featured product carousel.</p>
-                        <div class="tags">
-                            <span>React.js</span>
-                            <span>Bootstrap.css</span>
-                        </div>
-                    </div>
-                </div>
 
-                <!-- Project Card 2 -->
+                <!-- Project Card 1 -->
                 <div class="project-card">
                     <div class="project-img">
                         <img src="./assets/3-600x400.jpg" alt="Project 2">
@@ -173,23 +154,42 @@
                     </div>
                 </div>
 
-                <!-- Project Card 3 -->
+                <!-- Project Card 2 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://picsum.photos/id/119/600/400" alt="Project 3">
+                        <img src="./assets/amazon.png" alt="Project 1">
                         <div class="overlay">
-                            <a href="#" class="btn-icon"><i class="fa-brands fa-github"></i></a>
-                            <a href="#" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/Surafel13/Amazone-UI-Clone" class="btn-icon" title="View Code"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://amazone-ui-clone-v29y.vercel.app/" class="btn-icon" title="Live Preview"><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>AI Image Generator</h3>
-                        <p>An application that uses OpenAI's API to generate images from text prompts with a modern UI.
+                        <h3>Amazon Clone</h3>
+                        <p>A modern, responsive and clean homepage with product grids, a search bar, category banners, and a featured product carousel.</p>
+                        <div class="tags">
+                            <span>React.js</span>
+                            <span>Bootstrap.css</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project Card 3 -->
+                <div class="project-card">
+                    <div class="project-img">
+                        <img src="./assets/apple.png" alt="Project 3">
+                        <div class="overlay">
+                            <a href="https://github.com/Surafel13/Apple-Frontend-Clone" class="btn-icon"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://willowy-maamoul-a57ce3.netlify.app/" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Apple UI Clone</h3>
+                        <p>A modern, responsive interface inspired by Apple, built to showcase products with a sleek and professional design.
                         </p>
                         <div class="tags">
-                            <span>Next.js</span>
-                            <span>OpenAI API</span>
-                            <span>Stripe</span>
+                            <span>React.js</span>
+                            <span>Bootstrap.css</span>
                         </div>
                     </div>
                 </div>
