--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <img src="./assets/apple.png" alt="Project 3">
                         <div class="overlay">
                             <a href="https://github.com/Surafel13/Apple-Frontend-Clone" class="btn-icon"><i class="fa-brands fa-github"></i></a>
-                            <a href="https://willowy-maamoul-a57ce3.netlify.app/" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://apple-frontend-clone-mu.vercel.app/" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
