Updating contact me section

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="timeline">
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2023 - Present</div>
+                    <div class="timeline-date">2025 - Present</div>
                     <div class="timeline-content">
                         <h3>Senior Frontend Developer</h3>
                         <h4>TechSolutions Inc.</h4>
@@ -214,7 +214,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2021 - 2023</div>
+                    <div class="timeline-date">2023 - 2025</div>
                     <div class="timeline-content">
                         <h3>Web Developer</h3>
                         <h4>Creative Agency</h4>
@@ -224,7 +224,7 @@
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
-                    <div class="timeline-date">2020 - 2021</div>
+                    <div class="timeline-date">2023 - 2025</div>
                     <div class="timeline-content">
                         <h3>Junior Developer</h3>
                         <h4>StartUp Hub</h4>
@@ -248,18 +248,18 @@
                     <div class="contact-details">
                         <div class="item">
                             <i class="fa-solid fa-envelope"></i>
-                            <span>hello@example.com</span>
+                            <span>tesfayesurafel18@gmail.com</span>
                         </div>
                         <div class="item">
                             <i class="fa-solid fa-location-dot"></i>
-                            <span>San Francisco, CA</span>
+                            <span>Ethiopia,  Addis Ababa</span>
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                        <a href="https://github.com/Surafel13"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/surafel-tesfaye-123456789/"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://t.me/S13UR"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://www.instagram.com/sura_tes13/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
                 <form class="contact-form">
@@ -279,7 +279,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Alex Sterling. All Rights Reserved.</p>
+        <p>&copy; 2025 Surafel Tesfaye. All Rights Reserved.</p>
     </footer>
 
     <!-- Scripts -->
