--- a/index.html
+++ b/index.html
@@ -138,13 +138,17 @@
                     <div class="project-img">
                         <img src="./assets/3-600x400.jpg" alt="Project 2">
                         <div class="overlay">
-                            <a href="https://github.com/Surafel13/pulse-chat-app" class="btn-icon"><i class="fa-brands fa-github"></i></a>
-                            <a href="https://pulse-chat-app-rho.vercel.app/" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/Surafel13/pulse-chat-app" class="btn-icon"><i
+                                    class="fa-brands fa-github"></i></a>
+                            <a href="https://pulse-chat-app-rho.vercel.app/" class="btn-icon"><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
                         <h3>Real Time Chat App</h3>
-                        <p>A modern chat application built with React and Firebase. Users can send and receive messages instantly, see online status, and interact through a clean, responsive, and blue-themed interface.
+                        <p>A modern chat application built with React and Firebase. Users can send and receive messages
+                            instantly, see online status, and interact through a clean, responsive, and blue-themed
+                            interface.
                         </p>
                         <div class="tags">
                             <span>React.js</span>
@@ -159,14 +163,16 @@
                     <div class="project-img">
                         <img src="./assets/amazon.png" alt="Project 1">
                         <div class="overlay">
-                            <a href="https://github.com/Surafel13/Amazone-UI-Clone" class="btn-icon" title="View Code"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://github.com/Surafel13/Amazone-UI-Clone" class="btn-icon"
+                                title="View Code"><i class="fa-brands fa-github"></i></a>
                             <a href="https://amazone-ui-clone-v29y.vercel.app/" class="btn-icon" title="Live Preview"><i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
                         <h3>Amazon Clone</h3>
-                        <p>A modern, responsive and clean homepage with product grids, a search bar, category banners, and a featured product carousel.</p>
+                        <p>A modern, responsive and clean homepage with product grids, a search bar, category banners,
+                            and a featured product carousel.</p>
                         <div class="tags">
                             <span>React.js</span>
                             <span>Bootstrap.css</span>
@@ -179,13 +185,16 @@
                     <div class="project-img">
                         <img src="./assets/apple.png" alt="Project 3">
                         <div class="overlay">
-                            <a href="https://github.com/Surafel13/Apple-Frontend-Clone" class="btn-icon"><i class="fa-brands fa-github"></i></a>
-                            <a href="https://apple-frontend-clone-mu.vercel.app/" class="btn-icon"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/Surafel13/Apple-Frontend-Clone" class="btn-icon"><i
+                                    class="fa-brands fa-github"></i></a>
+                            <a href="https://apple-frontend-clone-mu.vercel.app/" class="btn-icon"><i
+                                    class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="project-info">
                         <h3>Apple UI Clone</h3>
-                        <p>A modern, responsive interface inspired by Apple, built to showcase products with a sleek and professional design.
+                        <p>A modern, responsive interface inspired by Apple, built to showcase products with a sleek and
+                            professional design.
                         </p>
                         <div class="tags">
                             <span>React.js</span>
@@ -252,25 +261,26 @@
                         </div>
                         <div class="item">
                             <i class="fa-solid fa-location-dot"></i>
-                            <span>Ethiopia,  Addis Ababa</span>
+                            <span>Ethiopia, Addis Ababa</span>
                         </div>
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/Surafel13"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/surafel-tesfaye-123456789/"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/surafel-tesfaye-123456789/"><i
+                                class="fa-brands fa-linkedin-in"></i></a>
                         <a href="https://t.me/S13UR"><i class="fa-brands fa-telegram"></i></a>
                         <a href="https://www.instagram.com/sura_tes13/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
-                <form class="contact-form">
+                <form class="contact-form" id="contact-form">
                     <div class="input-group">
-                        <input type="text" placeholder="Name" required>
+                        <input type="text" name="name" placeholder="Name" required>
                     </div>
                     <div class="input-group">
-                        <input type="email" placeholder="Email" required>
+                        <input type="email" name="email" placeholder="Email" required>
                     </div>
                     <div class="input-group">
-                        <textarea placeholder="Message" rows="5" required></textarea>
+                        <textarea name="message" placeholder="Message" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="cta-button">Send Message</button>
                 </form>
