--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     </div>
                     <div class="social-links">
                         <a href="https://github.com/Surafel13"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/surafel-tesfaye-123456789/"><i
+                        <a href="https://www.linkedin.com/in/surafel-tesfaye-621118359/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
                                 class="fa-brands fa-linkedin-in"></i></a>
                         <a href="https://t.me/S13UR"><i class="fa-brands fa-telegram"></i></a>
                         <a href="https://www.instagram.com/sura_tes13/"><i class="fa-brands fa-instagram"></i></a>
